--- a/GNN_CounterAttack_Thesis_show2.ipynb
+++ b/GNN_CounterAttack_Thesis_show2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNZqNZaTy9lB3kZzuiqCrTw",
+      "authorship_tag": "ABX9TyMDrnYuJLdMz5JrUhPkGlOO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ryu622/gnn-counterattack-xai-v2/blob/feat%2Fdelete-show-and-add-show2/GNN_CounterAttack_Thesis_show2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ryu622/gnn-counterattack-xai-v2/blob/fix%2Ffile-clean/GNN_CounterAttack_Thesis_show2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -423,7 +423,7 @@
         "\n",
         "plt.show()\n",
         "\n",
-        "print(\"🏁 STEP 7 完了: すべての工程が完了しました。\")"
+        "print(\"STEP 7 完了: すべての工程が完了しました。\")"
       ],
       "metadata": {
         "id": "i_fHiryHev0u"
@@ -799,7 +799,7 @@
         "\n",
         "plt.show()\n",
         "\n",
-        "print(\"✅ 失敗フレーム守備側のみの連携グラフ描画が完了しました。\")"
+        "print(\"失敗フレーム守備側のみの連携グラフ描画が完了しました。\")"
       ],
       "metadata": {
         "id": "QEYNyimUhgA_"
