--- a/scientificdata_one2.ipynb
+++ b/scientificdata_one2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOmso61KbrR8GwT5b45WFfp",
+      "authorship_tag": "ABX9TyNFrtJc46V/8o05J9flake5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ryu622/gnn-counterattack-xai-v2/blob/feat%2Fnew-processing/scientificdata_one2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ryu622/gnn-counterattack-xai-v2/blob/fix%2Ffile-clean/scientificdata_one2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -344,12 +344,12 @@
         "    if pyg_data:\n",
         "        save_path = os.path.join(save_dir, f\"match_{TARGET_MATCH_IDX + 1}.pt\")\n",
         "        torch.save(pyg_data, save_path)\n",
-        "        print(f\"-> ✅ 成功: {len(pyg_data)} シーンを保存しました: {save_path}\")\n",
+        "        print(f\"->  成功: {len(pyg_data)} シーンを保存しました: {save_path}\")\n",
         "    else:\n",
-        "        print(\"-> ⚠ 成功シーン(PA到達)が0件でした。\")\n",
+        "        print(\"->  成功シーン(PA到達)が0件でした。\")\n",
         "\n",
         "except Exception as e:\n",
-        "    print(f\"-> ❌ エラー: {e}\")"
+        "    print(f\"->  エラー: {e}\")"
       ],
       "metadata": {
         "id": "v6Dnzw2x8kND"
@@ -370,12 +370,12 @@
         "        # weights_only=False でセキュリティロックを回避\n",
         "        data = torch.load(file_path, weights_only=False)\n",
         "    except Exception as e:\n",
-        "        print(f\"❌ ファイルの読み込みに失敗しました: {e}\")\n",
+        "        print(f\" ファイルの読み込みに失敗しました: {e}\")\n",
         "        return\n",
         "\n",
         "    success_scenes = [d for d in data if d.y.item() == 1]\n",
         "    if not success_scenes:\n",
-        "        print(\"⚠ 成功シーン(y=1)がデータ内に存在しません。\")\n",
+        "        print(\" 成功シーン(y=1)がデータ内に存在しません。\")\n",
         "        return\n",
         "\n",
         "    ball_right_count = 0\n",
@@ -404,10 +404,10 @@
         "\n",
         "    print(f\"検証シーン数 (y=1): {len(success_scenes)}\")\n",
         "    print(f\"  [1] ボールの右向き推進率: {ball_rate:.1f}%\")\n",
-        "    print(f\"      -> {'✅ 物理強制成功' if ball_rate > 95 else '❌ 物理矛盾（Flipが効いていない）'}\")\n",
+        "    print(f\"      -> {' 物理強制成功' if ball_rate > 95 else '❌ 物理矛盾（Flipが効いていない）'}\")\n",
         "\n",
         "    print(f\"  [2] 全選手の右向き率:     {player_rate:.1f}%\")\n",
-        "    print(f\"      -> {'✅ 合格 (攻撃側と守備側が混在)' if 65 < player_rate < 90 else '⚠ 異常値 (再確認が必要)'}\")\n",
+        "    print(f\"      -> {' 合格 (攻撃側と守備側が混在)' if 65 < player_rate < 90 else '⚠ 異常値 (再確認が必要)'}\")\n",
         "\n",
         "# --- 実行 ---\n",
         "# いま保存した match_6.pt のパスを指定してください\n",
@@ -549,12 +549,12 @@
         "    if pyg_data:\n",
         "        save_path = os.path.join(save_dir, f\"match_{TARGET_MATCH_IDX + 1}.pt\")\n",
         "        torch.save(pyg_data, save_path)\n",
-        "        print(f\"-> ✅ 成功: {len(pyg_data)} シーンを保存しました: {save_path}\")\n",
+        "        print(f\"->  成功: {len(pyg_data)} シーンを保存しました: {save_path}\")\n",
         "    else:\n",
-        "        print(\"-> ⚠ 成功シーン(PA到達)が0件でした。\")\n",
+        "        print(\"->  成功シーン(PA到達)が0件でした。\")\n",
         "\n",
         "except Exception as e:\n",
-        "    print(f\"-> ❌ エラー: {e}\")"
+        "    print(f\"->  エラー: {e}\")"
       ],
       "metadata": {
         "id": "t3wumw-Xbf_N"
@@ -575,12 +575,12 @@
         "        # weights_only=False でセキュリティロックを回避\n",
         "        data = torch.load(file_path, weights_only=False)\n",
         "    except Exception as e:\n",
-        "        print(f\"❌ ファイルの読み込みに失敗しました: {e}\")\n",
+        "        print(f\" ファイルの読み込みに失敗しました: {e}\")\n",
         "        return\n",
         "\n",
         "    success_scenes = [d for d in data if d.y.item() == 1]\n",
         "    if not success_scenes:\n",
-        "        print(\"⚠ 成功シーン(y=1)がデータ内に存在しません。\")\n",
+        "        print(\" 成功シーン(y=1)がデータ内に存在しません。\")\n",
         "        return\n",
         "\n",
         "    ball_right_count = 0\n",
@@ -609,10 +609,10 @@
         "\n",
         "    print(f\"検証シーン数 (y=1): {len(success_scenes)}\")\n",
         "    print(f\"  [1] ボールの右向き推進率: {ball_rate:.1f}%\")\n",
-        "    print(f\"      -> {'✅ 物理強制成功' if ball_rate > 95 else '❌ 物理矛盾（Flipが効いていない）'}\")\n",
+        "    print(f\"      -> {' 物理強制成功' if ball_rate > 95 else '❌ 物理矛盾（Flipが効いていない）'}\")\n",
         "\n",
         "    print(f\"  [2] 全選手の右向き率:     {player_rate:.1f}%\")\n",
-        "    print(f\"      -> {'✅ 合格 (攻撃側と守備側が混在)' if 65 < player_rate < 90 else '⚠ 異常値 (再確認が必要)'}\")\n",
+        "    print(f\"      -> {' 合格 (攻撃側と守備側が混在)' if 65 < player_rate < 90 else '⚠ 異常値 (再確認が必要)'}\")\n",
         "\n",
         "# --- 実行 ---\n",
         "# いま保存した match_6.pt のパスを指定してください\n",
@@ -754,12 +754,12 @@
         "    if pyg_data:\n",
         "        save_path = os.path.join(save_dir, f\"match_{TARGET_MATCH_IDX + 1}.pt\")\n",
         "        torch.save(pyg_data, save_path)\n",
-        "        print(f\"-> ✅ 成功: {len(pyg_data)} シーンを保存しました: {save_path}\")\n",
+        "        print(f\"->  成功: {len(pyg_data)} シーンを保存しました: {save_path}\")\n",
         "    else:\n",
-        "        print(\"-> ⚠ 成功シーン(PA到達)が0件でした。\")\n",
+        "        print(\"->  成功シーン(PA到達)が0件でした。\")\n",
         "\n",
         "except Exception as e:\n",
-        "    print(f\"-> ❌ エラー: {e}\")"
+        "    print(f\"->  エラー: {e}\")"
       ],
       "metadata": {
         "id": "2m-13WXac9E-"
@@ -780,12 +780,12 @@
         "        # weights_only=False でセキュリティロックを回避\n",
         "        data = torch.load(file_path, weights_only=False)\n",
         "    except Exception as e:\n",
-        "        print(f\"❌ ファイルの読み込みに失敗しました: {e}\")\n",
+        "        print(f\" ファイルの読み込みに失敗しました: {e}\")\n",
         "        return\n",
         "\n",
         "    success_scenes = [d for d in data if d.y.item() == 1]\n",
         "    if not success_scenes:\n",
-        "        print(\"⚠ 成功シーン(y=1)がデータ内に存在しません。\")\n",
+        "        print(\" 成功シーン(y=1)がデータ内に存在しません。\")\n",
         "        return\n",
         "\n",
         "    ball_right_count = 0\n",
@@ -814,10 +814,10 @@
         "\n",
         "    print(f\"検証シーン数 (y=1): {len(success_scenes)}\")\n",
         "    print(f\"  [1] ボールの右向き推進率: {ball_rate:.1f}%\")\n",
-        "    print(f\"      -> {'✅ 物理強制成功' if ball_rate > 95 else '❌ 物理矛盾（Flipが効いていない）'}\")\n",
+        "    print(f\"      -> {' 物理強制成功' if ball_rate > 95 else '❌ 物理矛盾（Flipが効いていない）'}\")\n",
         "\n",
         "    print(f\"  [2] 全選手の右向き率:     {player_rate:.1f}%\")\n",
-        "    print(f\"      -> {'✅ 合格 (攻撃側と守備側が混在)' if 65 < player_rate < 90 else '⚠ 異常値 (再確認が必要)'}\")\n",
+        "    print(f\"      -> {'合格 (攻撃側と守備側が混在)' if 65 < player_rate < 90 else '⚠ 異常値 (再確認が必要)'}\")\n",
         "\n",
         "# --- 実行 ---\n",
         "# いま保存した match_6.pt のパスを指定してください\n",
@@ -959,12 +959,12 @@
         "    if pyg_data:\n",
         "        save_path = os.path.join(save_dir, f\"match_{TARGET_MATCH_IDX + 1}.pt\")\n",
         "        torch.save(pyg_data, save_path)\n",
-        "        print(f\"-> ✅ 成功: {len(pyg_data)} シーンを保存しました: {save_path}\")\n",
+        "        print(f\"->  成功: {len(pyg_data)} シーンを保存しました: {save_path}\")\n",
         "    else:\n",
-        "        print(\"-> ⚠ 成功シーン(PA到達)が0件でした。\")\n",
+        "        print(\"->  成功シーン(PA到達)が0件でした。\")\n",
         "\n",
         "except Exception as e:\n",
-        "    print(f\"-> ❌ エラー: {e}\")"
+        "    print(f\"->  エラー: {e}\")"
       ],
       "metadata": {
         "id": "8QHloFhUe01a"
@@ -985,12 +985,12 @@
         "        # weights_only=False でセキュリティロックを回避\n",
         "        data = torch.load(file_path, weights_only=False)\n",
         "    except Exception as e:\n",
-        "        print(f\"❌ ファイルの読み込みに失敗しました: {e}\")\n",
+        "        print(f\" ファイルの読み込みに失敗しました: {e}\")\n",
         "        return\n",
         "\n",
         "    success_scenes = [d for d in data if d.y.item() == 1]\n",
         "    if not success_scenes:\n",
-        "        print(\"⚠ 成功シーン(y=1)がデータ内に存在しません。\")\n",
+        "        print(\" 成功シーン(y=1)がデータ内に存在しません。\")\n",
         "        return\n",
         "\n",
         "    ball_right_count = 0\n",
@@ -1019,10 +1019,10 @@
         "\n",
         "    print(f\"検証シーン数 (y=1): {len(success_scenes)}\")\n",
         "    print(f\"  [1] ボールの右向き推進率: {ball_rate:.1f}%\")\n",
-        "    print(f\"      -> {'✅ 物理強制成功' if ball_rate > 95 else '❌ 物理矛盾（Flipが効いていない）'}\")\n",
+        "    print(f\"      -> {' 物理強制成功' if ball_rate > 95 else ' 物理矛盾（Flipが効いていない）'}\")\n",
         "\n",
         "    print(f\"  [2] 全選手の右向き率:     {player_rate:.1f}%\")\n",
-        "    print(f\"      -> {'✅ 合格 (攻撃側と守備側が混在)' if 65 < player_rate < 90 else '⚠ 異常値 (再確認が必要)'}\")\n",
+        "    print(f\"      -> {' 合格 (攻撃側と守備側が混在)' if 65 < player_rate < 90 else '⚠ 異常値 (再確認が必要)'}\")\n",
         "\n",
         "# --- 実行 ---\n",
         "# いま保存した match_6.pt のパスを指定してください\n",
@@ -1164,12 +1164,12 @@
         "    if pyg_data:\n",
         "        save_path = os.path.join(save_dir, f\"match_{TARGET_MATCH_IDX + 1}.pt\")\n",
         "        torch.save(pyg_data, save_path)\n",
-        "        print(f\"-> ✅ 成功: {len(pyg_data)} シーンを保存しました: {save_path}\")\n",
+        "        print(f\"->  成功: {len(pyg_data)} シーンを保存しました: {save_path}\")\n",
         "    else:\n",
-        "        print(\"-> ⚠ 成功シーン(PA到達)が0件でした。\")\n",
+        "        print(\"->  成功シーン(PA到達)が0件でした。\")\n",
         "\n",
         "except Exception as e:\n",
-        "    print(f\"-> ❌ エラー: {e}\")"
+        "    print(f\"->  エラー: {e}\")"
       ],
       "metadata": {
         "id": "PM6x0h4Df_E3"
@@ -1190,12 +1190,12 @@
         "        # weights_only=False でセキュリティロックを回避\n",
         "        data = torch.load(file_path, weights_only=False)\n",
         "    except Exception as e:\n",
-        "        print(f\"❌ ファイルの読み込みに失敗しました: {e}\")\n",
+        "        print(f\" ファイルの読み込みに失敗しました: {e}\")\n",
         "        return\n",
         "\n",
         "    success_scenes = [d for d in data if d.y.item() == 1]\n",
         "    if not success_scenes:\n",
-        "        print(\"⚠ 成功シーン(y=1)がデータ内に存在しません。\")\n",
+        "        print(\" 成功シーン(y=1)がデータ内に存在しません。\")\n",
         "        return\n",
         "\n",
         "    ball_right_count = 0\n",
@@ -1224,10 +1224,10 @@
         "\n",
         "    print(f\"検証シーン数 (y=1): {len(success_scenes)}\")\n",
         "    print(f\"  [1] ボールの右向き推進率: {ball_rate:.1f}%\")\n",
-        "    print(f\"      -> {'✅ 物理強制成功' if ball_rate > 95 else '❌ 物理矛盾（Flipが効いていない）'}\")\n",
+        "    print(f\"      -> {' 物理強制成功' if ball_rate > 95 else '❌ 物理矛盾（Flipが効いていない）'}\")\n",
         "\n",
         "    print(f\"  [2] 全選手の右向き率:     {player_rate:.1f}%\")\n",
-        "    print(f\"      -> {'✅ 合格 (攻撃側と守備側が混在)' if 65 < player_rate < 90 else '⚠ 異常値 (再確認が必要)'}\")\n",
+        "    print(f\"      -> {' 合格 (攻撃側と守備側が混在)' if 65 < player_rate < 90 else '⚠ 異常値 (再確認が必要)'}\")\n",
         "\n",
         "# --- 実行 ---\n",
         "# いま保存した match_6.pt のパスを指定してください\n",
@@ -1369,12 +1369,12 @@
         "    if pyg_data:\n",
         "        save_path = os.path.join(save_dir, f\"match_{TARGET_MATCH_IDX + 1}.pt\")\n",
         "        torch.save(pyg_data, save_path)\n",
-        "        print(f\"-> ✅ 成功: {len(pyg_data)} シーンを保存しました: {save_path}\")\n",
+        "        print(f\"->  成功: {len(pyg_data)} シーンを保存しました: {save_path}\")\n",
         "    else:\n",
-        "        print(\"-> ⚠ 成功シーン(PA到達)が0件でした。\")\n",
+        "        print(\"-> 成功シーン(PA到達)が0件でした。\")\n",
         "\n",
         "except Exception as e:\n",
-        "    print(f\"-> ❌ エラー: {e}\")"
+        "    print(f\"->  エラー: {e}\")"
       ],
       "metadata": {
         "id": "5dDNrIxAhOkj"
@@ -1395,12 +1395,12 @@
         "        # weights_only=False でセキュリティロックを回避\n",
         "        data = torch.load(file_path, weights_only=False)\n",
         "    except Exception as e:\n",
-        "        print(f\"❌ ファイルの読み込みに失敗しました: {e}\")\n",
+        "        print(f\" ファイルの読み込みに失敗しました: {e}\")\n",
         "        return\n",
         "\n",
         "    success_scenes = [d for d in data if d.y.item() == 1]\n",
         "    if not success_scenes:\n",
-        "        print(\"⚠ 成功シーン(y=1)がデータ内に存在しません。\")\n",
+        "        print(\"成功シーン(y=1)がデータ内に存在しません。\")\n",
         "        return\n",
         "\n",
         "    ball_right_count = 0\n",
@@ -1429,10 +1429,10 @@
         "\n",
         "    print(f\"検証シーン数 (y=1): {len(success_scenes)}\")\n",
         "    print(f\"  [1] ボールの右向き推進率: {ball_rate:.1f}%\")\n",
-        "    print(f\"      -> {'✅ 物理強制成功' if ball_rate > 95 else '❌ 物理矛盾（Flipが効いていない）'}\")\n",
+        "    print(f\"      -> {' 物理強制成功' if ball_rate > 95 else ' 物理矛盾（Flipが効いていない）'}\")\n",
         "\n",
         "    print(f\"  [2] 全選手の右向き率:     {player_rate:.1f}%\")\n",
-        "    print(f\"      -> {'✅ 合格 (攻撃側と守備側が混在)' if 65 < player_rate < 90 else '⚠ 異常値 (再確認が必要)'}\")\n",
+        "    print(f\"      -> {' 合格 (攻撃側と守備側が混在)' if 65 < player_rate < 90 else ' 異常値 (再確認が必要)'}\")\n",
         "\n",
         "# --- 実行 ---\n",
         "# いま保存した match_6.pt のパスを指定してください\n",
@@ -1574,12 +1574,12 @@
         "    if pyg_data:\n",
         "        save_path = os.path.join(save_dir, f\"match_{TARGET_MATCH_IDX + 1}.pt\")\n",
         "        torch.save(pyg_data, save_path)\n",
-        "        print(f\"-> ✅ 成功: {len(pyg_data)} シーンを保存しました: {save_path}\")\n",
+        "        print(f\"->  成功: {len(pyg_data)} シーンを保存しました: {save_path}\")\n",
         "    else:\n",
-        "        print(\"-> ⚠ 成功シーン(PA到達)が0件でした。\")\n",
+        "        print(\"->  成功シーン(PA到達)が0件でした。\")\n",
         "\n",
         "except Exception as e:\n",
-        "    print(f\"-> ❌ エラー: {e}\")"
+        "    print(f\"->  エラー: {e}\")"
       ],
       "metadata": {
         "id": "TqVXRLucrE7t"
@@ -1600,12 +1600,12 @@
         "        # weights_only=False でセキュリティロックを回避\n",
         "        data = torch.load(file_path, weights_only=False)\n",
         "    except Exception as e:\n",
-        "        print(f\"❌ ファイルの読み込みに失敗しました: {e}\")\n",
+        "        print(f\" ファイルの読み込みに失敗しました: {e}\")\n",
         "        return\n",
         "\n",
         "    success_scenes = [d for d in data if d.y.item() == 1]\n",
         "    if not success_scenes:\n",
-        "        print(\"⚠ 成功シーン(y=1)がデータ内に存在しません。\")\n",
+        "        print(\" 成功シーン(y=1)がデータ内に存在しません。\")\n",
         "        return\n",
         "\n",
         "    ball_right_count = 0\n",
@@ -1634,10 +1634,10 @@
         "\n",
         "    print(f\"検証シーン数 (y=1): {len(success_scenes)}\")\n",
         "    print(f\"  [1] ボールの右向き推進率: {ball_rate:.1f}%\")\n",
-        "    print(f\"      -> {'✅ 物理強制成功' if ball_rate > 95 else '❌ 物理矛盾（Flipが効いていない）'}\")\n",
+        "    print(f\"      -> {' 物理強制成功' if ball_rate > 95 else ' 物理矛盾（Flipが効いていない）'}\")\n",
         "\n",
         "    print(f\"  [2] 全選手の右向き率:     {player_rate:.1f}%\")\n",
-        "    print(f\"      -> {'✅ 合格 (攻撃側と守備側が混在)' if 65 < player_rate < 90 else '⚠ 異常値 (再確認が必要)'}\")\n",
+        "    print(f\"      -> {' 合格 (攻撃側と守備側が混在)' if 65 < player_rate < 90 else ' 異常値 (再確認が必要)'}\")\n",
         "\n",
         "# --- 実行 ---\n",
         "# いま保存した match_6.pt のパスを指定してください\n",
